--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,13 @@
 {
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "target": "es5",
+    "lib": ["esnext"],
     "module": "esnext",
+    "target": "esnext",
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
     "jsx": "react-jsx",
-    "jsxImportSource": "@emotion/react",
     "noImplicitAny": false,
     "typeRoots": [
       "@types",
@@ -32,6 +20,6 @@
   ],
   "include": [
     "@types",
-    "src"
+    "packages"
   ]
 }
