--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,10 +14,12 @@
     "@emotion/react": "11.4.0",
     "@emotion/styled": "11.3.0",
     "elasticsearch": "16.7.2",
+    "polished": "^4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
-    "typescript": "4.3.5"
+    "typescript": "4.3.5",
+    "use-deep-compare": "^1.1.0"
   },
   "devDependencies": {
     "@types/elasticsearch": "5.0.38",
