--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "11.4.0",
     "@emotion/styled": "11.3.0",
     "elasticsearch": "16.7.2",
+    "mathjs": "^9.4.4",
     "polished": "^4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
