--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -13,20 +13,24 @@
     "@emotion/css": "11.1.3",
     "@emotion/react": "11.4.0",
     "@emotion/styled": "11.3.0",
+    "@martin_hotell/rex-tils": "2.1.1",
     "elasticsearch": "16.7.2",
-    "mathjs": "^9.4.4",
-    "polished": "^4.1.3",
+    "mathjs": "9.4.4",
+    "polished": "4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "7.2.4",
     "react-scripts": "4.0.3",
+    "redux": "4.1.0",
     "typescript": "4.3.5",
-    "use-deep-compare": "^1.1.0"
+    "use-deep-compare": "1.1.0"
   },
   "devDependencies": {
     "@types/elasticsearch": "5.0.38",
     "@types/node": "16.3.3",
     "@types/react": "17.0.14",
-    "@types/react-dom": "17.0.9"
+    "@types/react-dom": "17.0.9",
+    "@types/react-redux": "7.1.18"
   },
   "browserslist": {
     "production": [
