--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "11.4.0",
     "@emotion/styled": "11.3.0",
     "@martin_hotell/rex-tils": "2.1.1",
+    "antd": "^4.16.8",
     "elasticsearch": "16.7.2",
     "mathjs": "9.4.4",
     "polished": "4.1.3",
