--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -15,11 +15,13 @@
     "@emotion/styled": "11.3.0",
     "@martin_hotell/rex-tils": "2.1.1",
     "antd": "^4.16.8",
+    "axios": "^0.21.1",
     "elasticsearch": "16.7.2",
     "mathjs": "9.4.4",
     "polished": "4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-query": "^3.19.0",
     "react-redux": "7.2.4",
     "react-scripts": "4.0.3",
     "redux": "4.1.0",
