--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "concurrently \"npm:watch:app\" \"npm:watch:libs\"",
     "watch:app": "yarn workspace @toprec/app start",
     "watch:libs": "yarn workspace @appbaseio/reactivecore start",
-    "build": "yarn workspace @toprec/app build"
+    "build": "yarn workspace @appbaseio/reactivecore build && yarn workspace @toprec/app build"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "4.28.2",
