--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -29,11 +29,13 @@
     "use-deep-compare": "1.1.0"
   },
   "devDependencies": {
+    "@craco/craco": "^6.2.0",
     "@types/elasticsearch": "5.0.38",
     "@types/node": "16.3.3",
     "@types/react": "17.0.14",
     "@types/react-dom": "17.0.9",
-    "@types/react-redux": "7.1.18"
+    "@types/react-redux": "7.1.18",
+    "craco-less": "^1.18.0"
   },
   "browserslist": {
     "production": [
