--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,11 +1,12 @@
 version: '3.7'
 services:
   app:
-    build: .
+    build:
+      context: .
+      args:
+        - REACT_APP_ES_INDEX=tmdb
+        - REACT_APP_ES_HOST=http://localhost:9200/
     container_name: toprec
-    environment:
-      - REACT_APP_ES_INDEX=tmdb
-      - REACT_APP_ES_HOST=http://localhost:9200/
     ports:
       - "5335:80"
     depends_on:
